Fix all test_data yaml files in yast to pass yamllint
We had similar issues in test_data directory, so fixing those profiles
as well.

--- a/test_data/yast/ext4/ext4.yaml
+++ b/test_data/yast/ext4/ext4.yaml
@@ -1,8 +1,9 @@
-  allowed_unpartitioned: 0.00GB
-  partitions:
-    - mnt_point: /
-      fs_type: ext4
-    - mnt_point: /home
-      fs_type: xfs 
-    - mnt_point: [SWAP]
-      fs_type: swap
+---
+allowed_unpartitioned: 0.00GB
+partitions:
+  - mnt_point: /
+    fs_type: ext4
+  - mnt_point: /home
+    fs_type: xfs
+  - mnt_point: '[SWAP]'
+    fs_type: swap
