--- a/test_data/yast/encryption/default_enc.yaml
+++ b/test_data/yast/encryption/default_enc.yaml
@@ -1,11 +1,12 @@
+---
 cryptsetup:
   device_status:
-      message: 'is active and is in use.'
-      properties:
-        type: 'LUKS1'
-        cipher: 'aes-xts-plain64'
-        key_location: 'dm-crypt'
-        mode: 'read/write'
+    message: is active and is in use.
+    properties:
+      type: LUKS1
+      cipher: aes-xts-plain64
+      key_location: dm-crypt
+      mode: read/write
 luks:
-  backup_base_path: '/root/bkp_luks_header'
+  backup_base_path: /root/bkp_luks_header
   backup_file_info: 'LUKS encrypted file, ver 1 \[aes, xts-plain64, sha256\]'
