--- a/test_data/yast/modify_existing_partition/modify_existing_partition.yaml
+++ b/test_data/yast/modify_existing_partition/modify_existing_partition.yaml
@@ -1,18 +1,20 @@
 ---
-  root:
-    disk: 'vda'
-    existing_partition: 'vda2'
-    mount_point: '/'
-    fs_type: 'ext4'
-    # Sizes should be preferably expressed in human readable binary units (eg GiB) for this test suite:
-    # we use lsblk in validation modules, wich uses human readable binary unit (*ibits).
-    # part_size is the size we input in partitioner, lsblk_expected_size_output is what we'll use for validation.
-    part_size: '11GiB'
-    lsblk_expected_size_output: '11G'
-  swap:
-    disk: 'vda'
-    existing_partition: 'vda3'
-    fs_type: 'swap'
-    skip: 1
-    part_size: '2GiB'
-    lsblk_expected_size_output: '2G'
+root:
+  disk: vda
+  existing_partition: vda2
+  mount_point: /
+  fs_type: ext4
+  # Sizes should be preferably expressed in human readable binary units (eg GiB)
+  # for this test suite: we use lsblk in validation modules, which uses human
+  # readable binary unit (*ibits).
+  # part_size is the size we input in partitioner, lsblk_expected_size_output
+  # is what we'll use for validation.
+  part_size: 11GiB
+  lsblk_expected_size_output: 11G
+swap:
+  disk: vda
+  existing_partition: vda3
+  fs_type: swap
+  skip: 1
+  part_size: 2GiB
+  lsblk_expected_size_output: 2G
