--- a/test_data/yast/msdos/msdos.yaml
+++ b/test_data/yast/msdos/msdos.yaml
@@ -1,3 +1,4 @@
+---
 table_type: msdos
 partition_table_disk: vda
 disks:
@@ -13,7 +14,7 @@ disks:
           filesystem: xfs
         mounting_options:
           should_mount: 1
-          mount_point: '/'
+          mount_point: /
       - size: 9250Mib
         role: data
         partition_type: primary
@@ -23,14 +24,14 @@ disks:
           filesystem: xfs
         mounting_options:
           should_mount: 1
-          mount_point: '/home'
-      - size: max 
+          mount_point: /home
+      - size: max
         role: swap
         partition_type: primary
-        validation_flag: 0 
+        validation_flag: 0
         formatting_options:
           should_format: 1
           filesystem: swap
         mounting_options:
           should_mount: 1
-          mount_point: '[SWAP]' 
+          mount_point: '[SWAP]'
