--- a/test_data/yast/msdos/msdos_pv.yaml
+++ b/test_data/yast/msdos/msdos_pv.yaml
@@ -1,3 +1,4 @@
+---
 table_type: msdos
 partition_table_disk: xvdb
 disks:
@@ -13,7 +14,7 @@ disks:
           filesystem: xfs
         mounting_options:
           should_mount: 1
-          mount_point: '/'
+          mount_point: /
       - size: 9250Mib
         role: data
         partition_type: primary
@@ -23,7 +24,7 @@ disks:
           filesystem: xfs
         mounting_options:
           should_mount: 1
-          mount_point: '/home'
+          mount_point: /home
       - size: max
         role: swap
         partition_type: primary
@@ -34,4 +35,3 @@ disks:
         mounting_options:
           should_mount: 1
           mount_point: '[SWAP]'
-
