--- a/schedule/qam/12-SP4/qam-minimal.yaml
+++ b/schedule/qam/12-SP4/qam-minimal.yaml
@@ -7,6 +7,7 @@ schedule:
 - {{disk_activation}}
 - installation/scc_registration
 - installation/addon_products_sle
+- {{system_role}}
 - installation/partitioning
 - installation/partitioning_finish
 - installation/installer_timezone
@@ -31,6 +32,10 @@ conditional_schedule:
     ARCH:
       s390x:
         - installation/disk_activation
+  system_role:
+    ARCH:
+      x86_64:
+        - installation/system_role
   reboot:
     ARCH:
       x86_64:
