--- a/schedule/yast/yast2_ncurses/yast2_ncurses_textmode.yaml
+++ b/schedule/yast/yast2_ncurses/yast2_ncurses_textmode.yaml
@@ -8,6 +8,7 @@ schedule:
   - console/prepare_test_data
   - console/consoletest_setup
   - console/yast2_lan
+  - console/yast2_i
   - "{{yast2_lan_device_settings}}"
 conditional_schedule:
   bootloader_start:
