Add a check for non-deletion of snapshots in transactional

--- a/schedule/yast/transactional_server/transactional_server_snapper.yaml
+++ b/schedule/yast/transactional_server/transactional_server_snapper.yaml
@@ -22,6 +22,7 @@ schedule:
   - console/consoletest_setup
   - console/hostname
   - console/snapper_create_from
+  - transactional/verify_undelete_snapshots
 test_data:
   snapshots:
     - description: 'Snapshot with read-write'
