Add validation modules for nis tests

--- a/schedule/yast/nis/nis_client.yaml
+++ b/schedule/yast/nis/nis_client.yaml
@@ -5,3 +5,7 @@ description:    >
 schedule:
   - boot/boot_to_desktop
   - x11/nis_client
+  - x11/nis_client_validate
+test_data:
+  nis_domain: nis.openqa.suse.de
+  username: nis_user
