Schedule validation modules for addon-module-ftp|http
Enabling validation modules for the scenarios.

See [poo#67579](https://progress.opensuse.org/issues/67579).

--- a/schedule/yast/addon-module-ftp.yaml
+++ b/schedule/yast/addon-module-ftp.yaml
@@ -25,6 +25,10 @@ schedule:
   - installation/reboot_after_installation
   - '{{grub}}'
   - installation/first_boot
+  - console/system_prepare
+  - console/consoletest_setup
+  - console/zypper_ref
+  - console/validate_addon_repos
 conditional_schedule:
   hostname_inst:
     BACKEND:
