--- a/schedule/qam/12-SP5/qam-create_hdd_sles4sap_gnome.yml
+++ b/schedule/qam/12-SP5/qam-create_hdd_sles4sap_gnome.yml
@@ -8,6 +8,7 @@ schedule:
   - installation/accept_license
   - installation/scc_registration
   - installation/sles4sap_product_installation_mode
+  - '{{update_test_repo}}'
   - installation/addon_products_sle
   - installation/partitioning
   - installation/partitioning_finish
@@ -28,3 +29,8 @@ schedule:
   - shutdown/grub_set_bootargs
   - shutdown/cleanup_before_shutdown
   - shutdown/shutdown
+conditional_schedule:
+  update_test_repo:
+    QAM_INCI:
+      1:
+        - installation/add_update_test_repo
