Separate container-diff and refactor in lib/containers/

--- a/schedule/containers/extra_tests_textmode_containers.yaml
+++ b/schedule/containers/extra_tests_textmode_containers.yaml
@@ -22,6 +22,7 @@ conditional_schedule:
         DISTRI:
             'opensuse':
                 - containers/docker_image
+                - containers/container_diff
     containers_3rd_party:
         DISTRI:
             'opensuse':
