--- a/schedule/containers/sle_image_on_sle_host.yaml
+++ b/schedule/containers/sle_image_on_sle_host.yaml
@@ -19,3 +19,4 @@ schedule:
     - boot/boot_to_desktop
     - containers/podman_image
     - containers/docker_image
+    - containers/container_diff
